@@ -28,5 +28,5 @@ The built jars can be found in `PSP031-client/target` and `PSP031-server/target`
 To run either of them:
 
 ```shell
-java -jar PSP031-client-1.0-SNAPSHOT.jar
+java --enable-preview -jar PSP031-client-1.0-SNAPSHOT.jar
 ```
